--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://telegram.org/js/telegram-web-app.js?58"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" />
@@ -9,7 +10,7 @@
     <link rel="manifest" href="/manifest.json" />
     <title>Abzac</title>
   </head>
-  <body class="font-serif">
+  <body class="font-rubick bg-main">
     <div id="app"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
